[frontend]: Addressed issues with home page sizing on smaller screens.

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,7 +2,7 @@
     background-color: #232323;
     color: white;
     width: 100%;
-    height: 12vh;
+    height: 16svh;
     display: flex;
     align-items: center;
     justify-content: space-between;
